--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	// webflux
 	implementation("org.springframework.boot:spring-boot-starter-webflux")
 
+	implementation 'org.postgresql:postgresql:42.6.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
