--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,11 @@ dependencies {
 	// webflux
 	implementation("org.springframework.boot:spring-boot-starter-webflux")
 
+	// db
 	implementation 'org.postgresql:postgresql:42.6.0'
+
+	// swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
