--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+	ext {
+		mapstructVersion = "1.5.5.Final"
+	}
+}
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.5'
@@ -35,8 +41,10 @@ dependencies {
 	// webflux
 	implementation("org.springframework.boot:spring-boot-starter-webflux")
 
-	// db
 	implementation 'org.postgresql:postgresql:42.6.0'
+
+	// ssh 터널링 세팅
+	implementation 'com.github.mwiede:jsch:0.2.17'
 
 	// swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
@@ -45,6 +53,23 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	implementation 'org.apache.commons:commons-pool2'
+	implementation 'org.apache.httpcomponents.client5:httpclient5'
+
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
+	//mapstruct
+	implementation "org.mapstruct:mapstruct:$mapstructVersion"
+	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
+	annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
+
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.1'
 }
 
 tasks.named('test') {
