Feat: 알림 목록 조회 관련 코드 추가

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
 	ext {
 		mapstructVersion = "1.5.5.Final"
+		queryDslVersion = "5.0.0"
 	}
 }
 
@@ -43,6 +44,12 @@ dependencies {
 
 	implementation 'org.postgresql:postgresql:42.6.0'
 
+	//querydsl 설정 추가
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
 	// ssh 터널링 세팅
 	implementation 'com.github.mwiede:jsch:0.2.17'
 
@@ -74,4 +81,24 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+/**
+ * QueryDSL Build Options
+ */
+def generated = 'src/main/generated'
+
+// querydsl QClass 파일 생성 위치를 지정
+tasks.withType(JavaCompile) {
+	options.getGeneratedSourceOutputDirectory().set(file(generated))
+}
+
+// java source set 에 querydsl QClass 위치 추가
+sourceSets {
+	main.java.srcDirs += [ generated ]
+}
+
+// gradle clean 시에 QClass 디렉토리 삭제
+clean {
+	delete file(generated)
 }
